# aule

./: .gitattributes  .gitignore  404.html  ARCHITECTURE_REPORT.md  ARCHITECTURE_SMELLS.md  CONTRIBUTING.md  CURSOR_SYSTEM_PROMPT.md  Cargo.toml  LICENSE  README.md  TEST_MATRIX.md  UNIFICATION_PLAN.md  analyze_rollover_probe.py  architecture.html  aule_backlog_simulation_architecture_tickets_for_cursor.md  aule_theory_rationale_reference_keyed_to_tickets.md  clippy.toml  contributing.html  depth_t001000.0Myr.csv  depth_t002000.0Myr.csv  depth_t003000.0Myr.csv  depth_t004000.0Myr.csv  e --abbrev-ref HEAD  getting-started.html  hypsometry_1755090348.csv  index.html  info.md  print.html  roadmap.html  rollover_probe_summary.json  rustfmt.toml  task_cards.md  toc.html  validation.html
aule/engine/: Cargo.toml
aule/engine/src/: accretion.rs  age.rs  boundaries.rs  cadence_manager.rs  cfl.rs  config.rs  continent.rs  elevation_manager.rs  erosion.rs  face_pick.rs  fields.rs  flexure.rs  flexure_gpu.rs  flexure_loads.rs  flexure_manager.rs  force_balance.rs  geo.rs  gpu.rs  grid.rs  hypsometry.rs  isostasy.rs  lib.rs  orogeny.rs  pipeline.rs  plate_network.rs  plates.rs  ridge.rs  rifting.rs  sea_level.rs  sediment.rs  sl_advect.rs  snapshots.rs  stepper.rs  subduction.rs  surface.rs  tileplan.rs  transforms.rs  unified_pipeline.rs  units.rs  util.rs  (+1 more)
aule/engine/src/grid/: cache.rs  tile.rs
aule/engine/tests/: accretion.rs  age.rs  boundaries.rs  continent.rs  fields.rs  flexure.rs  flexure_gpu.rs  flexure_loads.rs  grid.rs  hypsometry.rs  isostasy.rs  isostasy_rebaseline.rs  orogeny.rs  plates.rs  plates_kinematics.rs  ridge.rs  rifting.rs  sea_level.rs  simple_generate.rs  snapshot.rs  stepper.rs  subduction.rs  subduction_rollback.rs  supercontinent.rs  surface.rs  tile.rs  tiling.rs  transforms.rs  unified_pipeline.rs
aule/viewer/: Cargo.toml
aule/viewer/src/: colormap.rs  cpu_picker.rs  export.rs  gpu_buffer_manager.rs  lib.rs  main.rs  overlay.rs  pixel_map.rs  plot.rs  plot_age_depth.rs  plot_flexure.rs  raster.rs  raster_gpu.rs
aule/viewer/tests/: colormap.rs
docs/: book.toml
(+48 files in other folders)
