[package]
name = "engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
smallvec = "1.13"
wgpu.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
rand.workspace = true

[dev-dependencies]
pollster.workspace = true



