[package]
name = "viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
winit.workspace = true
wgpu.workspace = true
egui.workspace = true
egui-winit = { version = "0.27", default-features = false, features = ["clipboard"] }
egui-wgpu = { version = "0.27", default-features = false }
egui_plot = { version = "0.27", default-features = false }
pollster.workspace = true
engine = { path = "../engine" }
aule-geo = { path = "../geo" }
bytemuck.workspace = true
glam.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }


